# minimal_for_arm

./: CMakeLists.txt  main.cpp
armnn_delegate_prebuilt/lib/aarch64/: libarmnnDelegate.so.SOVERSION
armnn_delegate_prebuilt/lib/x64_linux/: libarmnnDelegate.so.SOVERSION
armnn_prebuilt/lib/aarch64/: libarmnnBasePipeServer.so.25.0  libarmnnOnnxParser.so.24.1  libarmnnTfLiteParser.so.24.1  libtimelineDecoder.so.25.0  libtimelineDecoderJson.so.25.0
armnn_prebuilt/lib/x64_linux/: libarmnnBasePipeServer.so.25.0  libarmnnOnnxParser.so.24.1  libarmnnTfLiteParser.so.24.1  libtimelineDecoder.so.25.0  libtimelineDecoderJson.so.25.0
armnn_prebuilt/protobuf_lib/aarch64/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
